ipc/ipdl/test/ipdl/error/undefSelfRecStruct.ipdl
//error: struct `X' is only partially defined

struct X { X x; };

[ChildProc=any]
protocol undefSelfRecStruct {
child: async __delete__(X x);
};
